parser10/tree-sitter-able/grammar.js
    source_file: $ => seq(
      field("package", optional($.package_statement)),
      repeat(field("imports", $.import_statement)),
      repeat(field("statements", $.statement)),
    ),

    function_definition: $ => seq(
      optional("private"),
      "fn",
      field("name", $.identifier),
      field("type_parameters", optional($.type_parameter_list)),
      field("parameters", $.parameter_list),
      field("return_type", optional($.return_type)),
      field("where_clause", optional($.where_clause)),
      field("body", $.block),
    ),

    parameter_list: $ => seq(
      "(",
      commaSep($.parameter),
      ")",
    ),

    parameter: $ => seq(
      field("pattern", $.pattern),
      optional(seq(":", field("type", $.type_expression))),
    ),

    block: $ => seq(
      "{",
      repeat($.statement),
      "}",
    ),

    expression_statement: $ => seq(
      field("expression", $.expression),
      optional(";"),
    ),

    pipe_expression: $ => prec.left(
      PREC.pipe,
      seq(
        $.matchable_expression,
        repeat(seq("|>", $.matchable_expression)),
      ),
    ),

    matchable_expression: $ => choice(
      $.ensure_expression,
      $.rescue_expression,
      $.handling_expression,
      $.proc_expression,
      $.spawn_expression,
    $.breakpoint_expression,
    $.match_expression,
    $.assignment_expression,
  ),

    assignment_expression: $ => choice(
      prec.right(
        PREC.assignment,
        seq(
          field("left", $.assignment_target),
          field("operator", $.assignment_operator),
          field("right", $.assignment_expression),
        ),
      ),
      $.range_expression,
    ),

    assignment_target: $ => choice(
      $.pattern,
      $.postfix_expression,
    ),

    assignment_operator: _ => choice(...ASSIGN_OPERATORS),

    range_expression: $ => choice(
      prec.left(
        PREC.range,
        seq(
          $.logical_or_expression,
          field("operator", choice("..", "...")),
          $.logical_or_expression,
        ),
      ),
      $.logical_or_expression,
    ),

    logical_or_expression: $ => prec.left(
      PREC.logical_or,
      seq(
        $.logical_and_expression,
        repeat(seq("||", $.logical_and_expression)),
      ),
    ),

    logical_and_expression: $ => prec.left(
      PREC.logical_and,
      seq(
        $.bitwise_or_expression,
        repeat(seq("&&", $.bitwise_or_expression)),
      ),
    ),

    bitwise_or_expression: $ => prec.left(
      PREC.bit_or,
      seq(
        $.bitwise_xor_expression,
        repeat(seq("|", $.bitwise_xor_expression)),
      ),
    ),

    bitwise_xor_expression: $ => prec.left(
      PREC.bit_xor,
      seq(
        $.bitwise_and_expression,
        repeat(seq("\\xor", $.bitwise_and_expression)),
      ),
    ),

    bitwise_and_expression: $ => prec.left(
      PREC.bit_and,
      seq(
        $.equality_expression,
        repeat(seq("&", $.equality_expression)),
      ),
    ),

    equality_expression: $ => prec.left(
      PREC.equality,
      seq(
        $.comparison_expression,
        repeat(seq(choice("==", "!="), $.comparison_expression)),
      ),
    ),

    comparison_expression: $ => prec.left(
      PREC.comparison,
      seq(
        $.shift_expression,
        repeat(seq(choice(">", "<", ">=", "<="), $.shift_expression)),
      ),
    ),

    shift_expression: $ => prec.left(
      PREC.shift,
      seq(
        $.additive_expression,
        repeat(seq(choice("<<", ">>"), $.additive_expression)),
      ),
    ),

    additive_expression: $ => prec.left(
      PREC.additive,
      seq(
        $.multiplicative_expression,
        repeat(seq(choice("+", "-"), $.multiplicative_expression)),
      ),
    ),

    multiplicative_expression: $ => prec.left(
      PREC.multiplicative,
      seq(
        $.unary_expression,
        repeat(seq(choice("*", "/", "%"), $.unary_expression)),
      ),
    ),

    unary_expression: $ => choice(
      prec.right(
        PREC.unary,
        seq(
          choice("-", "!", "~"),
          $.unary_expression,
        ),
      ),
      $.exponent_expression,
    ),

    exponent_expression: $ => choice(
      prec.right(
        PREC.exponent,
        seq(
          $.postfix_expression,
          "^",
          $.exponent_expression,
        ),
      ),
      $.postfix_expression,
    ),

    postfix_expression: $ => prec.left(
      PREC.call,
      seq(
        choice(
          $.primary_expression,
          $.proc_expression,
          $.spawn_expression,
          $.breakpoint_expression,
        ),
        repeat(choice(
          $.type_arguments,
          $.call_suffix,
          $.index_suffix,
          $.propagate_suffix,
          $.member_access,
        )),
        optional($.lambda_expression),
      ),
    ),

    call_suffix: $ => prec.dynamic(-1, seq(
      token.immediate("("),
      commaSep($.expression),
      optional(","),
      ")",
    )),

    member_access: $ => prec.left(
      PREC.member,
      seq(
        ".",
        $.identifier,
      ),
    ),

    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.placeholder_expression,
      $.implicit_member_expression,
      $.topic_reference,
      $.if_expression,
      $.do_expression,
      $.iterator_literal,
      $.lambda_expression,
      $.parenthesized_expression,
    ),

    lambda_expression: $ => prec.right(
      PREC.lambda,
      seq(
        "{",
        optional(field("parameters", $.lambda_parameter_list)),
        optional(seq("->", field("return_type", $.type_expression))),
        "=>",
        field("body", $.expression),
        "}",
      ),
    ),

    lambda_parameter_list: $ => seq(
      $.lambda_parameter,
      repeat(seq(",", $.lambda_parameter)),
      optional(","),
    ),

    lambda_parameter: $ => field("name", $.identifier),

    parenthesized_expression: $ => seq(
      "(",
      $.expression,
      ")",
    ),

    array_literal: $ => seq(
      "[",
      commaSep($.expression),
      optional(","),
      "]",
    ),

    pattern_base: $ => choice(
      $.identifier,
      "_",
      $.literal_pattern,
      $.struct_pattern,
      $.array_pattern,
      $.parenthesized_pattern,
    ),

    placeholder_expression: _ => token(choice("@", /@[1-9][0-9]*/)),
    implicit_member_expression: $ => seq(
      "#",
      field("member", $.identifier),
    ),

    topic_reference: _ => token("%"),

    identifier: _ => token(prec(-1, /[A-Za-z_][A-Za-z0-9_]*/)),

    number_literal: _ => token(choice(
      new RegExp(FLOAT_LITERAL_PATTERN),
      new RegExp(FLOAT_SUFFIX_ONLY_PATTERN),
      new RegExp(INTEGER_LITERAL_PATTERN),
    )),

    string_literal: _ => token(seq(
      '"',
      repeat(choice(/[^"\\\n]+/, /\\./)),
      '"',
    )),

    boolean_literal: _ => choice("true", "false"),

    nil_literal: _ => "nil",
  },
});
