parser10/tree-sitter-able/test/corpus/expressions.txt
==================
Literal Expressions
==================

fn literals(value, result) {
  truthy := true
  falsy := false
  nothing := nil
  numbers := [1, 2, 3]
  first := numbers[0]
  negated := -first
  bool_not := !truthy
  span := 0...5
  combined := "hello" + "world"
  incremented := value |> (@ + 1)
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (pattern_base
          (identifier)))
      (parameter
        (pattern_base
          (identifier))))
    (block
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (boolean_literal)))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (boolean_literal)))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (nil_literal)))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (array_literal
                                                (pipe_expression
                                                  (matchable_expression
                                                    (assignment_expression
                                                      (range_expression
                                                        (logical_or_expression
                                                          (logical_and_expression
                                                            (bitwise_or_expression
                                                              (bitwise_xor_expression
                                                                (bitwise_and_expression
                                                                  (equality_expression
                                                                    (comparison_expression
                                                                      (shift_expression
                                                                        (additive_expression
                                                                          (multiplicative_expression
                                                                            (unary_expression
                                                                              (exponent_expression
                                                                                (postfix_expression
                                                                                  (primary_expression
                                                                                    (number_literal)))))))))))))))))))
                                                (pipe_expression
                                                  (matchable_expression
                                                    (assignment_expression
                                                      (range_expression
                                                        (logical_or_expression
                                                          (logical_and_expression
                                                            (bitwise_or_expression
                                                              (bitwise_xor_expression
                                                                (bitwise_and_expression
                                                                  (equality_expression
                                                                    (comparison_expression
                                                                      (shift_expression
                                                                        (additive_expression
                                                                          (multiplicative_expression
                                                                            (unary_expression
                                                                              (exponent_expression
                                                                                (postfix_expression
                                                                                  (primary_expression
                                                                                    (number_literal)))))))))))))))))))
                                                (pipe_expression
                                                  (matchable_expression
                                                    (assignment_expression
                                                      (range_expression
                                                        (logical_or_expression
                                                          (logical_and_expression
                                                            (bitwise_or_expression
                                                              (bitwise_xor_expression
                                                                (bitwise_and_expression
                                                                  (equality_expression
                                                                    (comparison_expression
                                                                      (shift_expression
                                                                        (additive_expression
                                                                          (multiplicative_expression
                                                                            (unary_expression
                                                                              (exponent_expression
                                                                                (postfix_expression
                                                                                  (primary_expression
                                                                                    (number_literal))))))))))))))))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier)))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (array_literal
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (number_literal)))))))))))))))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (unary_expression
                                          (exponent_expression
                                            (postfix_expression
                                              (primary_expression
                                                (identifier))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (unary_expression
                                          (exponent_expression
                                            (postfix_expression
                                              (primary_expression
                                                (identifier))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (number_literal)))))))))))))))
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (number_literal)))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (string_literal))))))
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (string_literal)))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier)))))))))))))))))))
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (parenthesized_expression
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (placeholder_expression))))))
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (number_literal))))))))))))))))))))))))))))))))))))))))))

==================
Partial Application and Shorthand
==================

fn partials(data, factor) {
  add_ten := add(@, 10)
  swap := combine(@2, @1)
  scaled := data.scale(@, factor)
  accessor := data.update_value
  greeter := prepend("Hello, ", @)
  partial_method := 5.add
  self_value := #value
  local := { entry => #name }
  repeated := (@1 + @1)
  mixed := merge(@, @2, @1)
  topic_sum := factor |> % + 1
  topic_method := data |> %.transform(factor)
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (pattern_base
          (identifier)))
      (parameter
        (pattern_base
          (identifier))))
    (block
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier))
                                            (call_suffix
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (placeholder_expression)))))))))))))))))))
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (number_literal)))))))))))))))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier))
                                            (call_suffix
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (placeholder_expression)))))))))))))))))))
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (placeholder_expression)))))))))))))))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier))
                                            (member_access
                                              (identifier))
                                            (call_suffix
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (placeholder_expression)))))))))))))))))))
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
                                                    (range_expression
                                                      (logical_or_expression
                                                        (logical_and_expression
                                                          (bitwise_or_expression
                                                            (bitwise_xor_expression
                                                              (bitwise_and_expression
                                                                (equality_expression
                                                                  (comparison_expression
                                                                    (shift_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (unary_expression
                                                                            (exponent_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (identifier)))))))))))))))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier))
                                            (member_access
                                              (identifier)))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier))
                                            (call_suffix
                                              (pipe_expression
                                                (matchable_expression
                                                  (assignment_expression
